--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon"> -->
+  <link href="img/favicon.png" rel="icon">
   
 
   <!-- Bootstrap CSS File -->
