--- a/blog-single.html
+++ b/blog-single.html
@@ -24,12 +24,7 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: DevFolio
-    Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
+ 
 </head>
 
 <body>
@@ -74,8 +69,8 @@
     <div class="overlay-mf"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
-        <div class="container">
-          <h2 class="intro-title mb-4">Blog Details</h2>
+        <div class="container-fluid">
+          <h1 class="intro-title mb-4">Blog Details</h1>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="#">Home</a>
@@ -89,7 +84,7 @@
       </div>
     </div>
   </div>
-  <!--/ Intro Skew End /-->
+  
 
   <!--/ Section Blog-Single Star /-->
   <section class="blog-wrapper sect-pt4" id="blog">
@@ -362,12 +357,6 @@
             <div class="copyright-box">
               <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
               <div class="credits">
-                <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-                -->
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
               </div>
             </div>
